fix styling on mobile for setup wizard

--- a/app/assets/stylesheets/coughdrop.css.scss
+++ b/app/assets/stylesheets/coughdrop.css.scss
@@ -56,6 +56,17 @@ header #normal_mode .btn {
   height: 45px;
   padding-top: 11px;
 }
+#setup_footer {
+  position: fixed; 
+  bottom: 0; 
+  left: 0; 
+  right: 0;
+  width: auto; 
+  background: #eee; 
+  padding: 5px 10px; 
+  z-index: 3; 
+  border-top: 1px solid #aaa;  
+}
 .bold {
   font-weight: bold;
 }
@@ -2303,14 +2314,15 @@ $nav_extras: #eee;
 /*  overflow: auto; */
   height: calc(100vh - 150px); 
   margin: -10px -10px -10px 10px; 
-  padding: 10px 0;
+  padding: 0 0 10px 0;
   box-shadow: inset 0 7px 10px -5px #888, inset 9px 0 10px -5px #888;
   margin-left: 0;
   padding-left: 10px;
   width: calc(75% + 10px);
   > .big_buttons {
     overflow: auto;
-    height: calc(100vh - 160px); 
+    padding-top: 10px;
+    height: calc(100vh - 150px); 
   }
   .main {
     margin-top: 5px;
@@ -2549,7 +2561,7 @@ $nav_extras: #eee;
     }
   }
 }
-@media (max-width: 830px) {
+@media (max-width: 850px) {
   @media (min-width: 768px) {
     .big_buttons {
       .button_row_wrap {
